[tool.poetry]
name = "lunar lander"
version = "0.1.0"
description = ""
authors = ["Liam Israel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
numpy = "^1.26.4"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
